Fixed alignment implementation of logo in 1c.

--- a/opdracht-1/styles.css
+++ b/opdracht-1/styles.css
@@ -30,6 +30,7 @@
       /*----- Logo flexbox -----*/
 .navbar-three .logo {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     flex-grow: 2;
 }
@@ -41,9 +42,6 @@
 
             /*----- Text flexbox -----*/
 .navbar-three .logo p {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
 }
 
@@ -59,6 +57,8 @@
 
 
 /* Opdracht 1d */
+
+/*----- Bullets off -----*/
 .navbar-four ul {
     list-style-type: none;
 }
@@ -75,7 +75,7 @@
  */
 .navbar-four .logo {
     display: flex;
-
+    justify-content: flex-end;
     align-items: center;
     background-color: green;
 }
@@ -88,9 +88,6 @@
             /*----- Text flexbox -----*/
 .navbar-four .logo p {
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
       /*----- Menu flexbox -----*/
